--- a/portfolio/src/components/about/components/interactiveCard.module.scss
+++ b/portfolio/src/components/about/components/interactiveCard.module.scss
@@ -1,6 +1,6 @@
 .interactiveCard {
   width: 100%;
-  height: 750px;
+  height: 500px;
   transition: all 0.2s linear;
   transition-property: box-shadow, transform;
   transform-style: preserve-3d;
@@ -42,6 +42,10 @@
     .interactiveCard__text {
       transform: translateX(10px) translateY(10px) translateZ(15px);
     }
+
+    .interactiveCard__link svg {
+      transform: translateX(10px) translateY(10px) translateZ(15px);
+    }
   }
 
   &__wrapper {
@@ -56,14 +60,66 @@
     top: 0;
   }
 
+  &__link {
+    &:hover {
+      svg {
+        fill: rgba(0, 255, 255, 0.7);
+        path {
+          stroke: rgba(0, 255, 255, 0.7);
+        }
+
+        circle {
+          stroke: rgba(0, 255, 255, 0.7);
+        }
+      }
+    }
+
+    svg {
+      width: 25px;
+      height: 25px;
+      fill: #fff;
+      margin-right: 15px;
+      transform: translateX(0) translateY(0) translateZ(1px);
+      transition: transform 400ms;
+      transform-style: preserve-3d;
+      transition: all 0.4s ease-out;
+      path {
+        transition: all 0.4s ease-out;
+      }
+
+      circle {
+        transition: all 0.4s ease-out;
+      }
+    }
+  }
+
+  &__contentWrapper {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    height: 100%;
+  }
+
+  &__centerText {
+    text-align: center;
+  }
+
   &__text {
-    line-height: 1em;
+    line-height: 1.3;
     text-transform: none;
-    margin: 0;
-    padding: 1em;
+    margin-bottom: 15px;
+    font-size: 24px;
     color: #fff;
     transform: translateX(0) translateY(0) translateZ(1px);
     transition: transform 400ms;
     transform-style: preserve-3d;
+
+    &:last-child {
+      margin-top: 50px;
+    }
+
+    &_small {
+      font-size: 16px;
+    }
   }
 }
