--- a/portfolio/src/components/experience/components/ProjectsExperienceItem/projectsExperienceItem.module.scss
+++ b/portfolio/src/components/experience/components/ProjectsExperienceItem/projectsExperienceItem.module.scss
@@ -40,6 +40,13 @@
     transition: color 0.2s ease-out;
   }
 
+  &__date {
+    font-size: 12px;
+    color: #fff;
+    font-weight: bold;
+    margin-bottom: 15px;
+  }
+
   &__description {
     margin-bottom: 20px;
   }
