--- a/portfolio/src/components/experience/experience.module.scss
+++ b/portfolio/src/components/experience/experience.module.scss
@@ -3,8 +3,8 @@
   max-width: 1340px;
   padding: 0 25px;
   margin: 0 auto;
-  display: flex;
-  align-items: flex-start;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
   color: #fff5ee;
 
   &__leftSide {
@@ -20,10 +20,37 @@
     position: absolute;
     top: 0;
     opacity: 0;
+    pointer-events: none;
     padding-top: 15px;
+    margin-right: 15px;
     display: flex;
     align-items: center;
     transition: opacity 0.2s ease-out;
+
+    &_link {
+      margin-bottom: 15px;
+      font-size: 24px;
+      text-transform: uppercase;
+      font-weight: 500;
+      text-decoration: none;
+      color: rgba(0, 255, 255, 0.7);
+      display: inline-block;
+
+      &:hover {
+        svg {
+          transform: translateY(0%);
+          transform: translateX(3px);
+        }
+      }
+
+      svg {
+        margin-left: 10px;
+        transform: translateY(25%);
+        width: 18px;
+        height: 18px;
+        transition: transform 0.2s ease-out;
+      }
+    }
 
     &_title {
       margin-bottom: 15px;
@@ -62,6 +89,7 @@
 
     &_active {
       opacity: 1;
+      pointer-events: all;
     }
   }
 
