--- a/portfolio/src/components/about/components/interactiveCard.module.scss
+++ b/portfolio/src/components/about/components/interactiveCard.module.scss
@@ -1,6 +1,6 @@
 .interactiveCard {
   width: 100%;
-  height: 500px;
+  height: 600px;
   transition: all 0.2s linear;
   transition-property: box-shadow, transform;
   transform-style: preserve-3d;
@@ -16,6 +16,14 @@
   border-radius: 8px;
   overflow: hidden;
   z-index: 1;
+
+  @media (max-width: 991px) {
+    padding: 50px 25px;
+  }
+
+  @media (max-width: 767px) {
+    height: auto;
+  }
 
   &::before {
     position: absolute;
