--- a/portfolio/src/components/experience/experience.module.scss
+++ b/portfolio/src/components/experience/experience.module.scss
@@ -7,13 +7,29 @@
   grid-template-columns: 1fr 1fr;
   color: #fff5ee;
 
+  @media (max-width: 991px) {
+    grid-template-columns: 1fr;
+  }
+
+  @media (max-width: 575px) {
+    padding: 0 15px;
+  }
+
   &__leftSide {
     position: relative;
     width: 100%;
+
+    @media (max-width: 991px) {
+      display: none;
+    }
   }
 
   &__rightSide {
     max-width: 580px;
+
+    @media (max-width: 991px) {
+      max-width: 100%;
+    }
   }
 
   &__section {
