--- a/portfolio/src/components/hero/hero.module.scss
+++ b/portfolio/src/components/hero/hero.module.scss
@@ -4,6 +4,18 @@
   max-width: 1340px;
   margin: 0 auto;
 
+  @media (max-width: 575px) {
+    padding: 25px 15px;
+  }
+
+  &__icon {
+    svg {
+      width: 60px;
+      height: 60px;
+      margin-left: 20px;
+    }
+  }
+
   &__name {
     font-size: 96px;
     font-weight: bold;
@@ -22,6 +34,18 @@
       filter: blur(0px);
       opacity: 1;
     }
+
+    @media (max-width: 991px) {
+      font-size: 56px;
+      margin-bottom: 15px;
+      margin-left: 15px;
+    }
+
+    @media (max-width: 575px) {
+      font-size: 36px;
+      margin-bottom: 15px;
+      margin-left: 0;
+    }
   }
 
   &__position {
@@ -39,6 +63,16 @@
       transform: translateY(0);
       filter: blur(0px);
       opacity: 1;
+    }
+
+    @media (max-width: 991px) {
+      font-size: 24px;
+      margin-bottom: 15px;
+      margin-left: 15px;
+    }
+
+    @media (max-width: 575px) {
+      font-size: 18px;
     }
   }
 
@@ -60,12 +94,32 @@
       filter: blur(0px);
       opacity: 1;
     }
+
+    @media (max-width: 991px) {
+      font-size: 16px;
+      margin-bottom: 15px;
+      margin-left: 15px;
+    }
+
+    @media (max-width: 575px) {
+      font-size: 16px;
+      margin-bottom: 0;
+      margin-left: 0;
+    }
   }
 
   &__content {
     padding-top: 50px;
     display: flex;
     color: #fff5ee;
+
+    @media (max-width: 991px) {
+      padding-top: 25px;
+    }
+
+    @media (max-width: 575px) {
+      display: block;
+    }
   }
 
   &__line {
@@ -89,6 +143,18 @@
       filter: blur(0px);
       opacity: 1;
     }
+
+    @media (max-width: 991px) {
+      width: 200px;
+      height: 300px;
+    }
+
+    @media (max-width: 575px) {
+      width: 100px;
+      height: 150px;
+      float: left;
+      margin-right: 10px;
+    }
   }
 
   &__wrapper {
@@ -98,6 +164,19 @@
     height: 100%;
     min-height: 800px;
     transform-style: preserve-3d;
+
+    @media (max-width: 991px) {
+      min-height: unset;
+      margin-bottom: 25px;
+    }
+  }
+
+  &__sliderWrapper {
+    display: none;
+    @media (max-width: 991px) {
+      display: block;
+      padding-bottom: 25px;
+    }
   }
 
   &__block {
@@ -112,6 +191,10 @@
     box-shadow: 10px 10px 67px 0px rgba(0, 0, 0, 0.75);
     border-radius: 50%;
     filter: blur(2px);
+
+    @media (max-width: 991px) {
+      display: none;
+    }
   }
 
   &__circle {
@@ -140,6 +223,14 @@
         width: 50px;
         height: 50px;
         filter: drop-shadow(0 -3px 6px rgb(17, 136, 136));
+      }
+    }
+
+    @media (max-width: 991px) {
+      display: none;
+
+      &_item {
+        display: none;
       }
     }
   }
