--- a/portfolio/src/components/shared/Input/input.module.scss
+++ b/portfolio/src/components/shared/Input/input.module.scss
@@ -25,6 +25,10 @@
     width: 100%;
     display: flex;
     flex-direction: column;
-    min-width: 400px;
+  }
+
+  @media (max-width: 767px) {
+    width: 100%;
+    max-width: 100%;
   }
 }
