--- a/portfolio/src/components/about/about.module.scss
+++ b/portfolio/src/components/about/about.module.scss
@@ -1,12 +1,12 @@
 .about {
   height: 100%;
-  padding: 50px 25px;
+  padding: 50px 25px 0 25px;
   max-width: 1340px;
   margin: 0 auto;
   color: #fff5ee;
 
   @media (max-width: 575px) {
-    padding: 25px 15px;
+    padding: 25px 15px 0 15px;
   }
 
   &__contentWrapper {
